--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,7 @@ server.port=8086
 
 #====file===
 #mb
+spring.file.path=C:/var/log/applications/API/
 spring.max-file-size=5
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
