--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,25 @@
-spring.application.name=student-management
+#datasource
+spring.datasource.platform=mssql
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=student_management;encrypt=false;trustServerCertificate=true
+spring.datasource.username=USER
+spring.datasource.password=##SECURE##
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=##SECURE##
+
+#mail
+#=================================
+spring.mail.username=<mail>@gmail.com
+spring.mail.from=<mail>@gmail.com
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.password=##SECURE##
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.debug=true
