--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.mail.from=info@compulynx.com
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.host=smtp.compulynx.com
 spring.mail.port=587
-spring.mail.password=wbqSECUREjskgbqx
+spring.mail.password=##SECURE###
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -50,4 +50,3 @@ server.tomcat.max-http-post-size=5MB
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
