--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ application.version=version 1.0
 spring.profiles.active=local
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
 #==========================================================================
 #Auth
 application.auth.default-user.first-name=Admin
@@ -20,6 +21,7 @@ application.auth.mfa-channel=EMAIL
 jwt.expiry=3600
 jwt.issuer=compulynx
 application.base-url=http://localhost:4200/auth/reset/
+
 #=======================================================================================
 # Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
@@ -37,11 +39,10 @@ spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.debug=true
 
-server.port=8086
-
 #====file===
 #mb
 spring.file.path=C:/var/log/applications/API/
+spring.file.max-records=1000
 spring.max-file-size=5
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
@@ -50,3 +51,5 @@ server.tomcat.max-http-post-size=5MB
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+server.port=8086
